--- a/src/modules/QuoteModule/Forms/styles.module.css
+++ b/src/modules/QuoteModule/Forms/styles.module.css
@@ -48,3 +48,21 @@
   font-size: larger;
 }
 
+.ant-collapse-item-arrow {
+  display: none;
+}
+
+.ant-collapse-item {
+  position: relative;
+}
+
+.ant-collapse-item .ant-collapse-header {
+  padding-right: 24px; /* Adjust padding for the plus icon */
+}
+
+.ant-collapse-item .ant-collapse-header .anticon {
+  position: absolute;
+  top: 50%;
+  right: 12px;
+  transform: translateY(-50%);
+}
